# turboballs

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Readme.md  vcpkg.json
.github/workflows/: ci.yml
assets/models/: sphere.blend  sphere.glb  sphere.gltf
assets/models/poly/: poly.blend  poly.glb  poly.gltf
assets/models/vaporwave/: vapor.blend  vapor.glb  vapor.gltf  vapor.mtl
assets/shaders/: mesh.frag  mesh.vert  sprite.frag  sprite.vert
game/: CMakeLists.txt
game/include/: asset-manager-aggregates.hpp  game.hpp  resource-paths.hpp
game/lib/glad/: CMakeLists.txt
game/lib/glad/include/glad/: glad.h
game/lib/glad/src/: glad.c
game/modules/asset/: asset-manager.hpp
game/modules/input/: CMakeLists.txt
game/modules/input/include/: input.hpp
game/modules/input/src/: input.cpp
game/modules/mixer/: CMakeLists.txt
game/modules/mixer/include/: mixer.hpp
game/modules/mixer/src/: mixer.cpp
game/modules/reload/: cr.h  shared-data.hpp
game/modules/render/: CMakeLists.txt
game/modules/render/include/: font.hpp  mesh-renderer.hpp  mesh.hpp  model.hpp  renderer.hpp  shader.hpp  sprite-batch.hpp  spritesheet.hpp  stb_image_write.h  texture.hpp  tiny_gltf.h  tiny_obj_loader.h  utils.hpp  window.hpp
game/modules/render/src/: font.cpp  mesh-renderer.cpp  mesh.cpp  model.cpp  renderer.cpp  shader.cpp  sprite-batch.cpp  spritesheet.cpp  texture.cpp  window.cpp
game/src/: asset-manager-aggregates.cpp  game.cpp
include/: app.hpp
scripts/: format.py  optimize_build_assets.py  sprite_atlasser.py
src/: app.cpp  main.cpp
web/: index.html
